--- a/nadi-web/package.json
+++ b/nadi-web/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/lato": "^5.1.0",
+    "@fontsource/roboto": "^5.1.0",
     "astro": "^4.16.13"
   }
 }
