--- a/nadi-web/package.json
+++ b/nadi-web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/lato": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
-    "astro": "^4.16.13"
+    "astro": "^4.16.13",
+    "papaparse": "^5.4.1"
   }
 }
