--- a/nadi-web/package.json
+++ b/nadi-web/package.json
@@ -13,6 +13,8 @@
     "@fontsource/lato": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
     "astro": "^4.16.13",
-    "papaparse": "^5.4.1"
+    "jsonfile": "^6.1.0",
+    "papaparse": "^5.4.1",
+    "xlsx": "^0.18.5"
   }
 }
